# e-shop

./: .env  .env.example  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml  justfile
.sqlx/: query-100816b22d9ccc87052bfe704fbb4b2c2cc4ff311ef4e7f75e653886fb7e7873.json  query-33de585f492d980dd6fc2420352233a03fdc6ed226fdb338a31601f906805454.json  query-6395bc855ad3887eee29bc7cef0f103f88713eca9bc3f976d98e66203e668595.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-88bf3a9d37f0e950d04f87165cb214750257f8d1e3eac1f5dff06d64b0023495.json  query-897ababd4be66ffc67e1612cbdfe9e9e74ab265b953cf0c0321e5f47ef5dae96.json  query-a0a13dd18ae68c807794347a006dc253ada0511ea66c7dd1421b8f694d0266c1.json  query-ad49fea24f21783516cf1f2df5abac4beca4d19a4b43cce45d33f410672c2128.json  query-adc73d61c9689adb8145d690ccb47a767504c6c417a77ffbb3878172467a944e.json  query-fa19a9d6fcace6f9346100369d0b4b5339d9ce7664509e3d7f86fd20616d336e.json
bins/basket-service/: Cargo.toml  Dockerfile
bins/basket-service/src/: main.rs
bins/basket-service/src/error/: mod.rs
bins/basket-service/src/handlers/: mod.rs
bins/basket-service/src/kafka/: mod.rs
bins/basket-service/src/models/: mod.rs
bins/basket-service/src/repository/: mod.rs
bins/basket-service/src/routes/: mod.rs
bins/gateway/: Cargo.toml  Dockerfile
bins/gateway/src/: auth.rs  config.rs  main.rs  proxy.rs
bins/identity-service/: Cargo.toml  Dockerfile
bins/identity-service/.sqlx/: query-3e320f021f38b70d25f6787678a69cab5446ae92e65af1e7f75bec6c8de39955.json  query-f3f58600e971f1be6cbe206bba24f77769f54c6230e28f5b3dc719b869d9cb3f.json
bins/identity-service/migrations/: 20260527161756_create_users.sql
bins/identity-service/src/: main.rs
bins/identity-service/src/db/: mod.rs
bins/identity-service/src/error/: mod.rs
bins/identity-service/src/handlers/: mod.rs
bins/identity-service/src/jwt/: mod.rs
bins/identity-service/src/models/: mod.rs
bins/identity-service/src/repository/: mod.rs
bins/ordering-service/: Cargo.toml  Dockerfile
bins/ordering-service/.sqlx/: query-058a0f1931753ee6922e6e24e1a6f66c4a85e7e3a46add54d9f6960361450aff.json  query-158a546fa6874c9b9b639cba56384477afbb2c746503b597617bfbd48aacb0d6.json  query-1a41aa10fc9b29384431c38ad7abcfa6109dfa3fbc93a7aeeb423dec5f52c262.json  query-2c706b07fcfe3579ad92bc1b7295260084a38da69a4d0fa3db5a00d8ed3a0c15.json
bins/ordering-service/migrations/: 20260522173402_create_orders.sql  20260522173403_create_order_items.sql
bins/ordering-service/src/: main.rs
bins/ordering-service/src/catalog_client/: mod.rs
bins/ordering-service/src/db/: mod.rs
bins/ordering-service/src/error/: mod.rs
bins/ordering-service/src/handlers/: mod.rs
bins/ordering-service/src/kafka/: mod.rs
bins/ordering-service/src/models/: mod.rs
bins/ordering-service/src/repository/: mod.rs
k8s/: configmap.yaml  namespace.yaml  secret.yaml
scripts/: init.sql  (+1 more)
(+43 files in other folders)
