[package]
name = "basket-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
redis = { version = "0.25.4", features = ["tokio-comp"] }
tracing = "0.1"
tracing-subscriber = "0.3"
