[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum        = "0.7"
tokio       = { version = "1", features = ["full"] }
reqwest     = { version = "0.12", features = ["rustls-tls", "stream"], default-features = false }
jsonwebtoken = "9"
serde       = { version = "1", features = ["derive"] }
dotenvy     = "0.15"
tracing     = "0.1"
tracing-subscriber = "0.3"
tower-http  = { version = "0.5", features = ["cors"] }
http        = "1"
