[package]
name = "identity-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum          = "0.7"
tokio         = { version = "1", features = ["full"] }
sqlx          = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono"] }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
thiserror     = "1"
chrono        = { version = "0.4", features = ["serde"] }
dotenvy       = "0.15"
tracing       = "0.1"
tracing-subscriber = "0.3"
argon2        = "0.5"
jsonwebtoken  = "9"
async-trait   = "0.1"
