[package]
name = "ordering-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum        = "0.7"
tokio       = { version = "1", features = ["full"] }
sqlx        = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "rust_decimal"] }
reqwest     = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "1"
chrono      = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde-float"] }
dotenvy     = "0.15"
tracing     = "0.1"
tracing-subscriber = "0.3"
rdkafka     = { version = "0.36", default-features = false, features = ["cmake-build", "tokio"] }
